# dumb-nats-rust-example

./: Cargo.toml  README.md  docker-compose.yml
src/: main.rs
