[package]
name = "nats-example"
version = "0.1.0"
authors = ["Anh-kha Vo <anhkhav@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nats = "0.7.2"
tokio = {version="0.2.22", features=["rt-core","macros"]}
clap = "3.0.0-beta.1"
